--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Hello Angular 2!</title>
   </head>
   <body>
-    <hello-world>Loading…</hello-world>
+    <hello-world>Loading...</hello-world>
+    <script src="./bundle.js"></script>
   </body>
 </html>
